[project]
name = "fastapi-finance-api"
version = "0.1.0"
description = "Track personl income and expenses"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.31",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests_*.py"]
